package com.ia.para.devs.mockai.infrastructure.persistence.entity;

import java.util.List;
import java.util.UUID;

import jakarta.persistence.CascadeType;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.OneToMany;
import jakarta.persistence.Table;
import lombok.AccessLevel;
import lombok.Data;
import lombok.EqualsAndHashCode;
import lombok.experimental.FieldDefaults;

@Entity
@Data
@Table(name = "api_specification")
@FieldDefaults(level = AccessLevel.PRIVATE)
@EqualsAndHashCode(of = "id")
public class ApiSpecificationEntity {

    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    UUID id;

    @Column(nullable = false)
    String title;

    @Column(nullable = false)
    String version;

    @Column(columnDefinition = "TEXT")
    String description;

    String baseUrl;

    /**
     * Bloco "components" da spec OpenAPI serializado como JSON.
     * Armazenado para permitir a resolução de $ref em tempo de execução
     * pelo DynamicResponseBodyBuilder.
     */
    @Column(columnDefinition = "TEXT")
    String componentsJson;

    @OneToMany(mappedBy = "apiSpecification", cascade = CascadeType.ALL, orphanRemoval = true)
    List<EndpointDefinitionEntity> endpoints;
}
